# fctlog

./: CMakeLists.txt  LICENSE  README.md  TODO.md  meson.build
demo/: CMakeLists.txt  demo.h  main.cpp  meson.build
samples/: CMakeLists.txt  meson.build
samples/demo/: CMakeLists.txt  demo.cpp  demo.h  demolog.h  main.cpp  meson.build
samples/template/: CMakeLists.txt  demo.h  demolog.h  main.cpp  meson.build
src/: meson.build
src/include/: meson.build
src/include/fctlog/: .gitattributes  define.h  functionlogger.h  meson.build  ostream.h  outputter.h
